// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should accept data-analytics attributes 1`] = `
.c4.c4.c4.c4.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 16px;
  height: 16px;
  border-width: 1.5px;
  border-style: solid;
  margin: 2px;
  border-radius: 2px;
  background-color: hsla(0,0%,100%,0);
  border-color: hsla(214,28%,84%,1);
}

.c5.c5.c5.c5.c5 {
  -webkit-animation: gYwSSW-450290765 160ms cubic-bezier(0.17,0,1,1);
  animation: gYwSSW-450290765 160ms cubic-bezier(0.17,0,1,1);
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6.c6.c6.c6.c6 {
  margin-left: 4px;
}

.c7.c7.c7.c7.c7 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c3.c3.c3.c3.c3 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c3.c3.c3.c3.c3:focus-visible + div {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c3.c3.c3.c3.c3:hover + div {
  border-color: hsla(214,28%,84%,1);
  background-color: hsla(211,20%,52%,0.06);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
}

<div>
  <div
    class=""
    data-blade-component="checkbox"
  >
    <label
      class="c0"
      data-blade-component="checkbox-label"
      style="cursor: pointer;"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <input
            aria-checked="false"
            aria-disabled="false"
            aria-invalid="false"
            aria-required="false"
            class="c3"
            data-analytics-label="Remember password"
            role="checkbox"
            type="checkbox"
            value=""
          />
          <div
            class="c4"
            data-blade-component="checkbox-icon-wrapper"
          >
            <div
              class=""
              style="opacity: 0; position: absolute; display: flex;"
            >
              <svg
                aria-hidden="true"
                class="Svgweb__StyledSvg-vcmjs8-0"
                data-blade-component="icon"
                fill="none"
                height="12px"
                viewBox="0 0 8 8"
                width="12px"
              >
                <path
                  clip-rule="evenodd"
                  d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                  data-blade-component="svg-path"
                  fill="hsla(0, 0%, 100%, 1)"
                  fill-rule="evenodd"
                  stroke="hsla(0, 0%, 100%, 1)"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="0.5"
                />
              </svg>
            </div>
            <div
              class="c5"
              style="opacity: 0; position: absolute; display: flex;"
            />
          </div>
          <div
            class="c6"
            data-blade-component="base-box"
          />
          <p
            class="c7"
            data-blade-component="text"
          >
            Remember password
          </p>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> should render checkbox with label 1`] = `
.c4.c4.c4.c4.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 16px;
  height: 16px;
  border-width: 1.5px;
  border-style: solid;
  margin: 2px;
  border-radius: 2px;
  background-color: hsla(0,0%,100%,0);
  border-color: hsla(214,28%,84%,1);
}

.c5.c5.c5.c5.c5 {
  -webkit-animation: gYwSSW-450290765 160ms cubic-bezier(0.17,0,1,1);
  animation: gYwSSW-450290765 160ms cubic-bezier(0.17,0,1,1);
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6.c6.c6.c6.c6 {
  margin-left: 4px;
}

.c9.c9.c9.c9.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7.c7.c7.c7.c7 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c10.c10.c10.c10.c10 {
  color: hsla(227,71%,51%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c3.c3.c3.c3.c3 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c3.c3.c3.c3.c3:focus-visible + div {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c3.c3.c3.c3.c3:hover + div {
  border-color: hsla(214,28%,84%,1);
  background-color: hsla(211,20%,52%,0.06);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
}

.c8.c8.c8.c8.c8 {
  padding: 0;
  background-color: transparent;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  cursor: pointer;
  display: inline-block;
  border-radius: 2px;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
}

.c8.c8.c8.c8.c8 .content-container {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  border-radius: 2px;
}

.c8.c8.c8.c8.c8:focus-visible .content-container {
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.09);
}

.c8.c8.c8.c8.c8 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
}

<div>
  <div
    class=""
    data-blade-component="checkbox"
  >
    <label
      class="c0"
      data-blade-component="checkbox-label"
      style="cursor: pointer;"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <input
            aria-checked="false"
            aria-disabled="false"
            aria-invalid="false"
            aria-required="false"
            class="c3"
            role="checkbox"
            type="checkbox"
            value=""
          />
          <div
            class="c4"
            data-blade-component="checkbox-icon-wrapper"
          >
            <div
              class=""
              style="opacity: 0; position: absolute; display: flex;"
            >
              <svg
                aria-hidden="true"
                class="Svgweb__StyledSvg-vcmjs8-0"
                data-blade-component="icon"
                fill="none"
                height="12px"
                viewBox="0 0 8 8"
                width="12px"
              >
                <path
                  clip-rule="evenodd"
                  d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                  data-blade-component="svg-path"
                  fill="hsla(0, 0%, 100%, 1)"
                  fill-rule="evenodd"
                  stroke="hsla(0, 0%, 100%, 1)"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="0.5"
                />
              </svg>
            </div>
            <div
              class="c5"
              style="opacity: 0; position: absolute; display: flex;"
            />
          </div>
          <div
            class="c6"
            data-blade-component="base-box"
          />
          <p
            class="c7"
            data-blade-component="text"
          >
            I accept 
            <a
              aria-disabled="false"
              class="c8"
              data-blade-component="link"
              href="#"
              role="link"
            >
              <span
                class="c9 content-container"
                data-blade-component="base-box"
              >
                <span
                  class="c10"
                  data-blade-component="base-text"
                >
                  Terms and Conditions
                </span>
              </span>
            </a>
          </p>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> should set disabled state with isDisabled 1`] = `
.c4.c4.c4.c4.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 16px;
  height: 16px;
  border-width: 1.5px;
  border-style: solid;
  margin: 2px;
  border-radius: 2px;
  background-color: hsla(0,0%,100%,0);
  border-color: hsla(214,40%,92%,1);
}

.c5.c5.c5.c5.c5 {
  -webkit-animation: gYwSSW-450290765 160ms cubic-bezier(0.17,0,1,1);
  animation: gYwSSW-450290765 160ms cubic-bezier(0.17,0,1,1);
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6.c6.c6.c6.c6 {
  margin-left: 4px;
}

.c7.c7.c7.c7.c7 {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c3.c3.c3.c3.c3 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c3.c3.c3.c3.c3:focus-visible + div {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

<div>
  <div
    class=""
    data-blade-component="checkbox"
  >
    <label
      class="c0"
      data-blade-component="checkbox-label"
      style="cursor: not-allowed;"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <input
            aria-checked="false"
            aria-disabled="true"
            aria-invalid="false"
            aria-required="false"
            class="c3"
            disabled=""
            role="checkbox"
            type="checkbox"
            value=""
          />
          <div
            class="c4"
            data-blade-component="checkbox-icon-wrapper"
          >
            <div
              class=""
              style="opacity: 0; position: absolute; display: flex;"
            >
              <svg
                aria-hidden="true"
                class="Svgweb__StyledSvg-vcmjs8-0"
                data-blade-component="icon"
                fill="none"
                height="12px"
                viewBox="0 0 8 8"
                width="12px"
              >
                <path
                  clip-rule="evenodd"
                  d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                  data-blade-component="svg-path"
                  fill="hsla(0, 0%, 100%, 1)"
                  fill-rule="evenodd"
                  stroke="hsla(0, 0%, 100%, 1)"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="0.5"
                />
              </svg>
            </div>
            <div
              class="c5"
              style="opacity: 0; position: absolute; display: flex;"
            />
          </div>
          <div
            class="c6"
            data-blade-component="base-box"
          />
          <p
            class="c7"
            data-blade-component="text"
          >
            Remember password
          </p>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> should set error state with validationState 1`] = `
.c4.c4.c4.c4.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 16px;
  height: 16px;
  border-width: 1.5px;
  border-style: solid;
  margin: 2px;
  border-radius: 2px;
  background-color: hsla(0,0%,100%,0);
  border-color: hsla(4,74%,49%,1);
}

.c5.c5.c5.c5.c5 {
  -webkit-animation: gYwSSW-450290765 160ms cubic-bezier(0.17,0,1,1);
  animation: gYwSSW-450290765 160ms cubic-bezier(0.17,0,1,1);
}

.c11.c11.c11.c11.c11 {
  display: block;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6.c6.c6.c6.c6 {
  margin-left: 4px;
}

.c8.c8.c8.c8.c8 {
  margin-top: 4px;
}

.c9.c9.c9.c9.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 4px;
}

.c10.c10.c10.c10.c10 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-top: 2px;
}

.c7.c7.c7.c7.c7 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c12.c12.c12.c12.c12 {
  color: hsla(4,74%,49%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.6875rem;
  font-weight: 400;
  font-style: italic;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  word-break: break-word;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c3.c3.c3.c3.c3 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c3.c3.c3.c3.c3:focus-visible + div {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

<div>
  <div
    class=""
    data-blade-component="checkbox"
  >
    <label
      class="c0"
      data-blade-component="checkbox-label"
      style="cursor: pointer;"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <input
            aria-checked="false"
            aria-disabled="false"
            aria-errormessage="checkbox-25-errortext-27"
            aria-invalid="true"
            aria-required="false"
            class="c3"
            role="checkbox"
            type="checkbox"
            value=""
          />
          <div
            class="c4"
            data-blade-component="checkbox-icon-wrapper"
          >
            <div
              class=""
              style="opacity: 0; position: absolute; display: flex;"
            >
              <svg
                aria-hidden="true"
                class=""
                data-blade-component="icon"
                fill="none"
                height="12px"
                viewBox="0 0 8 8"
                width="12px"
              >
                <path
                  clip-rule="evenodd"
                  d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                  data-blade-component="svg-path"
                  fill="hsla(0, 0%, 100%, 1)"
                  fill-rule="evenodd"
                  stroke="hsla(0, 0%, 100%, 1)"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="0.5"
                />
              </svg>
            </div>
            <div
              class="c5"
              style="opacity: 0; position: absolute; display: flex;"
            />
          </div>
          <div
            class="c6"
            data-blade-component="base-box"
          />
          <p
            class="c7"
            data-blade-component="text"
          >
            Remember password
          </p>
        </div>
      </div>
    </label>
    <div
      class="c8"
      data-blade-component="base-box"
      id="checkbox-25-errortext-27"
    >
      <span
        class="c9"
        data-blade-component="base-box"
      >
        <div
          class="c10"
          data-blade-component="box"
        >
          <svg
            aria-hidden="true"
            class="c11"
            data-blade-component="icon"
            fill="none"
            height="12px"
            viewBox="0 0 24 24"
            width="12px"
          >
            <path
              d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
              data-blade-component="svg-path"
              fill="hsla(4, 74%, 49%, 1)"
            />
            <path
              d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
              data-blade-component="svg-path"
              fill="hsla(4, 74%, 49%, 1)"
            />
            <path
              clip-rule="evenodd"
              d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
              data-blade-component="svg-path"
              fill="hsla(4, 74%, 49%, 1)"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <span
          class="c12"
          data-blade-component="text"
        >
          This has to be checked
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> should set to indeterminate state of checkbox 1`] = `
.c4.c4.c4.c4.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 16px;
  height: 16px;
  border-width: 1.5px;
  border-style: solid;
  margin: 2px;
  border-radius: 2px;
  background-color: hsla(227,100%,59%,1);
  border-color: hsla(227,100%,59%,1);
}

.c5.c5.c5.c5.c5 {
  -webkit-animation: byNIqG-450290765 160ms cubic-bezier(0,0,0.2,1);
  animation: byNIqG-450290765 160ms cubic-bezier(0,0,0.2,1);
}

.c6.c6.c6.c6.c6 {
  -webkit-animation: gYwSSW-450290765 160ms cubic-bezier(0.17,0,1,1);
  animation: gYwSSW-450290765 160ms cubic-bezier(0.17,0,1,1);
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7.c7.c7.c7.c7 {
  margin-left: 4px;
}

.c8.c8.c8.c8.c8 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c3.c3.c3.c3.c3 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c3.c3.c3.c3.c3:focus-visible + div {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c3.c3.c3.c3.c3:hover + div {
  border-color: hsla(227,71%,51%,1);
  background-color: hsla(227,71%,51%,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
}

<div>
  <div
    class=""
    data-blade-component="checkbox"
  >
    <label
      class="c0"
      data-blade-component="checkbox-label"
      style="cursor: pointer;"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <input
            aria-checked="true"
            aria-disabled="false"
            aria-invalid="false"
            aria-required="false"
            checked=""
            class="c3"
            role="checkbox"
            type="checkbox"
            value=""
          />
          <div
            class="c4"
            data-blade-component="checkbox-icon-wrapper"
          >
            <div
              class="c5"
              style="opacity: 1; position: absolute; display: flex;"
            >
              <svg
                aria-hidden="true"
                class="Svgweb__StyledSvg-vcmjs8-0"
                data-blade-component="icon"
                fill="none"
                height="12px"
                viewBox="0 0 8 8"
                width="12px"
              >
                <path
                  clip-rule="evenodd"
                  d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                  data-blade-component="svg-path"
                  fill="hsla(0, 0%, 100%, 1)"
                  fill-rule="evenodd"
                  stroke="hsla(0, 0%, 100%, 1)"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="0.5"
                />
              </svg>
            </div>
            <div
              class="c6"
              style="opacity: 0; position: absolute; display: flex;"
            >
              <svg
                aria-hidden="true"
                class="Svgweb__StyledSvg-vcmjs8-0"
                data-blade-component="icon"
                fill="none"
                height="12px"
                viewBox="0 0 8 8"
                width="12px"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.90237 1.76413C7.03254 1.89431 7.03254 2.10536 6.90237 2.23554L3.2357 5.90221C3.10553 6.03238 2.89447 6.03238 2.7643 5.90221L1.09763 4.23554C0.967456 4.10536 0.967456 3.89431 1.09763 3.76414C1.22781 3.63396 1.43886 3.63396 1.56904 3.76414L3 5.1951L6.43096 1.76413C6.56114 1.63396 6.77219 1.63396 6.90237 1.76413Z"
                  data-blade-component="svg-path"
                  fill="hsla(0, 0%, 100%, 1)"
                  fill-rule="evenodd"
                  stroke="hsla(0, 0%, 100%, 1)"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="0.5"
                />
              </svg>
            </div>
          </div>
          <div
            class="c7"
            data-blade-component="base-box"
          />
          <p
            class="c8"
            data-blade-component="text"
          >
            Remember password
          </p>
        </div>
      </div>
    </label>
  </div>
</div>
`;
